@@ -2,7 +2,7 @@ sg3-utils (1.36-0.1) unstable; urgency=low
 
   * New upstream version
 
- -- Douglas Gilbert <dgilbert@interlog.com>  Tue, 12 Mar 2013 19:00:00 -0400
+ -- Douglas Gilbert <dgilbert@interlog.com>  Tue, 02 Apr 2013 12:00:00 -0400
 
 sg3-utils (1.35-0.1) unstable; urgency=low
 
